@@ -6,6 +6,8 @@ Revision history for Perl extension Apache::Gallery.
 snapshot
 
 	- Remember choosen width by setting a cookie (Rene Joergensen)
+	- Fixed a bug where $EXIFVALUES was left blank if a picture
+	  had a comment. (Me)
 
 0.7 Mon Sep  8 22:30:35 CEST 2003
 
